fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 /* default scrollbar  */
-❯ .custom-scrollbar {
+ .custom-scrollbar {
    scrollbar-width: none;
    /* Firefox */
    -ms-overflow-style: none;
